--- a/index.html
+++ b/index.html
@@ -4,8 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cool website</title>
+
+    <style>
+        h1 {
+            border: 1px dashed rgb(255, 207, 16);
+        }
+
+        p {
+            color: red; 
+            font-family: sans-serif; 
+            font-size: 40px;
+            filter: hue-rotate(360deg);
+        }
+        .alternate1 {
+            color: rgba(0, 255, 115, 0.633);
+            transition:1s;
+        }
+        .alternate1:hover {
+            color:rgb(251, 0, 255);
+            font-size: 100px;
+        }
+
+
+    </style>
+    
 </head>
 <body>
+
+    <h1>
+        this is a heading
+        </h1>
+
+<p class="alternate1">
+    some text goes here
+</p>
+<p class="alternate1">
+    some text goes here
+</p>
+
+<p>
+    some text goes here
+</p>
+
 
 </body>
 </html>
